[package]
name = "pathutil"
description = "Extend std::path::Path with errors that describe the offending path."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/nathan-at-least/pathutil"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-annotation = "0.1.3"
derive_more = "0.99.14"
