[package]
name = "pathutil"
description = "Extend std::path::Path with errors that describe the offending path."
version = "0.1.1"
license = "MIT"
repository = "https://github.com/nathan-at-least/pathutil"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.14"
error-annotation = "0.1.3"
indoc = "1.0.6"
